--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,15 +11,17 @@
     <link href="https://fonts.font.im/css?family=Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-   <time id = "time"> 12:30:04 PM</time> 
-   <h1>
-       <span id="greeting">Good Morning</span>
-       <span id="name" contenteditable="true">ABC</span>
-    </h1>
-   <h2>what do you want to do today?</h2>
-   <h2 id = "todo" contenteditable="true">I have no idea</h2>
 
-   <script src="js/main.js"></script>
+<body>
+    <time id="time"></time>
+    <h1>
+        <span id="greeting"></span>
+        <span id="name" contenteditable="true"></span>
+    </h1>
+    <h2>what do you want to do today?</h2>
+    <h2 id="todo" contenteditable="true"></h2>
+
+    <script src="js/main.js"></script>
 </body>
+
 </html>
